@@ -1,4 +1,8 @@
-﻿zg 08.02.2014 03:38:56 +0200 - build 3799
+﻿drkns 08.02.2014 12:39:25 +0200 - build 3800
+
+1. 0002577: Не работает сдвиг блока для строки с одним символом
+
+zg 08.02.2014 03:38:56 +0200 - build 3799
 
 1. уточнение 3794:
    при смене кодировки в редакторе любая пустая строка вызывает сообщение:
